--- a/openApiDocs/beta/Reports.yml
+++ b/openApiDocs/beta/Reports.yml
@@ -12231,8 +12231,9 @@ components:
             expirationDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: Time that the cached report expires
+              description: Time that the cached report expires. This property is read-only.
               format: date-time
+              readOnly: true
             filter:
               type: string
               description: Filters applied on report creation.
@@ -12240,8 +12241,9 @@ components:
             lastRefreshDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: Time that the cached report was last refreshed
+              description: Time that the cached report was last refreshed. This property is read-only.
               format: date-time
+              readOnly: true
             metadata:
               type: string
               description: Caller-managed metadata associated with the report
@@ -12254,8 +12256,9 @@ components:
               description: Ordering of columns in the report
             reportName:
               type: string
-              description: Name of the report
+              description: Name of the report. This property is read-only.
               nullable: true
+              readOnly: true
             select:
               type: array
               items:
@@ -12276,8 +12279,9 @@ components:
             expirationDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: Time that the exported report expires
+              description: Time that the exported report expires. This property is read-only.
               format: date-time
+              readOnly: true
             filter:
               type: string
               description: Filters applied on the report
@@ -12292,8 +12296,9 @@ components:
             requestDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: Time that the exported report was requested
+              description: Time that the exported report was requested. This property is read-only.
               format: date-time
+              readOnly: true
             select:
               type: array
               items:
@@ -12308,8 +12313,9 @@ components:
               $ref: '#/components/schemas/microsoft.graph.deviceManagementReportStatus'
             url:
               type: string
-              description: Temporary location of the exported report
+              description: Temporary location of the exported report. This property is read-only.
               nullable: true
+              readOnly: true
           additionalProperties:
             type: object
           description: Entity representing a job to export a report
@@ -13621,11 +13627,11 @@ components:
       properties:
         key:
           type: string
-          description: Contains the name of the field that a value is associated with.
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
